center align fixed

--- a/src/components/EclipsesSlider/EclipsesSlider.module.css
+++ b/src/components/EclipsesSlider/EclipsesSlider.module.css
@@ -78,6 +78,7 @@
     display: grid;
     gap: 1em;
     grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+    justify-content: center;
 }
 
 .whatIs, .essentialDataContainer {
