--- a/src/pages/SolarEclipses/SolarEclipses.module.css
+++ b/src/pages/SolarEclipses/SolarEclipses.module.css
@@ -1,4 +1,5 @@
 .mainContainer {
-    width: 100vw;
+    width: 90vw;
     height: 90vh;
+    text-align: justify;
 }
